--- a/protected/.htaccess
+++ b/protected/.htaccess
@@ -1,1 +1,11 @@
-deny from all
+RewriteEngine on
+RewriteBase /
+
+# if a directory or a file exists, use it directly
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# otherwise forward it to index.php
+RewriteRule . index.php
+
+RedirectMatch 404 ^/?\.hg*
